// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`About Page matches the snapshot in desktop view 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 4em;
}

.c1 {
  min-width: 40%;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c3 {
  max-width: 60%;
  padding: 0 4rem;
}

.c4 {
  font-size: 1.2rem;
  text-transform: uppercase;
  margin-bottom: 1.25rem;
}

.c5 {
  font-size: 1rem;
  line-height: 1.5;
  margin-bottom: 1.25rem;
}

.c2 {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <img
        alt="cato"
        class="c2"
        data-nimg="1"
        decoding="async"
        height="2688"
        src="/_next/image?url=%2Fimg.jpg&w=3840&q=40"
        srcset="/_next/image?url=%2Fimg.jpg&w=1920&q=40 1x, /_next/image?url=%2Fimg.jpg&w=3840&q=40 2x"
        style="color: transparent;"
        width="1920"
      />
    </div>
    <div
      class="c3"
    >
      <h2
        class="c4"
      >
        Hey it's us
      </h2>
      <p
        class="c5"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sit amet purus ac eros luctus dictum vel id dui. Nunc suscipit est vel augue euismod, quis tristique mauris luctus. Integer fringilla elit a eros mollis, nec dignissim eros efficitur. Sed eget eleifend lorem. Sed non arcu ac tortor consectetur lobortis vel vel arcu.
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`About Page matches the snapshot in mobile view 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 4em;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0.5rem;
  margin: 5rem 1rem 2rem;
}

.c1 {
  min-width: 40%;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 70%;
}

.c3 {
  max-width: 60%;
  padding: 0 4rem;
  max-width: 100%;
  padding: 1rem;
  text-align: center;
}

.c4 {
  font-size: 1.2rem;
  text-transform: uppercase;
  margin-bottom: 1.25rem;
}

.c5 {
  font-size: 1rem;
  line-height: 1.5;
  margin-bottom: 1.25rem;
}

.c2 {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <img
        alt="cato"
        class="c2"
        data-nimg="1"
        decoding="async"
        height="2688"
        src="/_next/image?url=%2Fimg.jpg&w=3840&q=40"
        srcset="/_next/image?url=%2Fimg.jpg&w=1920&q=40 1x, /_next/image?url=%2Fimg.jpg&w=3840&q=40 2x"
        style="color: transparent;"
        width="1920"
      />
    </div>
    <div
      class="c3"
    >
      <h2
        class="c4"
      >
        Hey it's us
      </h2>
      <p
        class="c5"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sit amet purus ac eros luctus dictum vel id dui. Nunc suscipit est vel augue euismod, quis tristique mauris luctus. Integer fringilla elit a eros mollis, nec dignissim eros efficitur. Sed eget eleifend lorem. Sed non arcu ac tortor consectetur lobortis vel vel arcu.
      </p>
    </div>
  </div>
</DocumentFragment>
`;
